# StereoCompressor

./: CMakeLists.txt  INSTALL.md
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
